--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: get_thumbnail_video
 description: "A flutter plugin for creating a thumbnail from a local video file or from a video URL."
 version: 0.7.3
-homepage:
+# homepage:
 repository: https://github.com/Alberto-Monteiro/video_thumbnail
 
 environment:
